--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  border-radius: 25px;
+  margin: 0 auto;
   text-align: center;
+  background-color: rgb(248, 137, 2);
+  width: 300px;
 }
 
 .App-logo {
