--- a/src/components/ChatList/ChatList.css
+++ b/src/components/ChatList/ChatList.css
@@ -1,6 +1,6 @@
 .Item{
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.596);
+    color: rgb(85, 85, 85);
     font-family: Lato;
     font-size: 20px;
     font-style: normal;
