--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,5 +1,5 @@
 .input{
-    color: white;
+    color: rgb(100, 100, 100);
     border: solid 2px rgba(3, 3, 145, 0.651);
     background: transparent;
     outline: none;
