--- a/src/components/Router/Router.css
+++ b/src/components/Router/Router.css
@@ -1,6 +1,6 @@
 .header{
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.596);
+    color: rgb(92, 92, 92);
     font-family: Lato;
     font-size: 20px;
     font-style: normal;
